--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>de.artality</groupId>
-	<artifactId>cmapi</artifactId>
+	<artifactId>artality-cmapi</artifactId>
 	<version>0.1</version>
 	<packaging>jar</packaging>
 
-	<name>cmapi</name>
+	<name>artality-cmapi</name>
 
 	<properties>
 		<maven.compiler.source>11</maven.compiler.source>
