--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>design.veracious</groupId>
-	<artifactId>veracious-cmapi</artifactId>
+	<groupId>de.artality</groupId>
+	<artifactId>artality-cmapi</artifactId>
 	<version>0.1</version>
 	<packaging>jar</packaging>
 
-	<name>veracious-cmapi</name>
+	<name>artality-cmapi</name>
 
 	<properties>
 		<maven.compiler.source>11</maven.compiler.source>
