--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>de.artality</groupId>
-	<artifactId>artality-cmapi</artifactId>
+	<groupId>design.veracious</groupId>
+	<artifactId>veracious-cmapi</artifactId>
 	<version>0.1</version>
 	<packaging>jar</packaging>
 
