--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>de.artality</groupId>
-	<artifactId>artality-cmapi</artifactId>
+	<groupId>design.veracious</groupId>
+	<artifactId>veracious-cmapi</artifactId>
 	<version>0.1</version>
 	<packaging>jar</packaging>
 
-	<name>artality-cmapi</name>
+	<name>veracious-cmapi</name>
 
 	<properties>
 		<maven.compiler.source>11</maven.compiler.source>
@@ -31,6 +31,11 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.9.10.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>2.3.2</version>
 		</dependency>
 	</dependencies>
 </project>
